--- a/.github/workflows/contenedor.yml
+++ b/.github/workflows/contenedor.yml
@@ -6,9 +6,11 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: login en GitHub Container Registry
-          env:
-            DOCKER_USER: ${{ secrets.DOCKER_USER }}
-            DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          uses: docker/login-action@v1
+          with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.TOK }}
           run: docker login ghcr.io -u $DOCKER_USER -p $DOCKER_PASSWORD 
         - name: construccion de la imagen
           run: docker build -t ghcr.io/joseegc10/env-get-match:latest .
