--- a/.github/workflows/contenedor.yml
+++ b/.github/workflows/contenedor.yml
@@ -1,7 +1,7 @@
 name: auto-docker-build
 on: [push]
 jobs:
-    build:
+    auto-GHCR:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
