--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ rvm:
 
 # Instalamos última versión de bundle
 before_install:
-    - gem install bundle
+    - gem install bundler
 
+# Instalamos las dependencias
 install: bundle install
 
 # Para ejecutar los test 
