--- a/shippable.yml
+++ b/shippable.yml
@@ -1,4 +1,5 @@
 build:
     ci:
+        - gem install bundler
         - docker build -t gmshippable .
         - docker run -t -v `pwd`:/test gmshippable:latest
