--- a/shippable.yml
+++ b/shippable.yml
@@ -2,4 +2,5 @@ build:
     ci:
         - docker build -t gmshippable .
         - ls -la
+        - pwd
         - docker run -t -v `pwd`:/test gmshippable:latest
