prueba archivo shippable, tarea #66

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,5 @@
 build:
     ci:
         - docker build -t gmshippable .
-        - ls -la
-        - docker run -t -v `pwd`:/test gmshippable:latest ls
+        - echo `pwd`
         - docker run -t -v `pwd`:/test gmshippable:latest
