--- a/shippable.yml
+++ b/shippable.yml
@@ -1,3 +1,8 @@
+integrations:
+    hub:
+      - integrationName: get-match
+        type: dockerRegistryLogin
+
 build:
     ci:
         - docker build -t gmshippable .
