prueba archivo shippable, tarea #66

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,6 @@
 integrations:
     hub:
-      - integrationName: get-match
+      - integrationName: gm_hub
         type: dockerRegistryLogin
 
 build:
