--- a/shippable.yml
+++ b/shippable.yml
@@ -1,10 +1,6 @@
-integrations:
-    hub:
-      - integrationName: gm_hub
-        type: dockerRegistryLogin
-
 build:
+    pre_ci_boot:
+        options: -v /test
     ci:
         - docker build -t gmshippable .
-        - echo `pwd`
         - docker run -t -v `pwd`:/test gmshippable:latest
