prueba archivo shippable, tarea #66

--- a/shippable.yml
+++ b/shippable.yml
@@ -3,4 +3,4 @@ build:
         options: -v /test
     ci:
         - docker build -t gmshippable .
-        - docker run -t -v `pwd`:/test gmshippable:latest
+        - docker run -t --volume-from `pwd`:/test gmshippable:latest
