--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,5 @@ build:
     pre_ci_boot:
         options: -v /test
     ci:
-        - cp . /test
         - docker build -t gmshippable .
-        - docker run -t -v `pwd`:/test gmshippable:latest
+        - docker run -t --volumes-from $SHIPPABLE_CONTAINER_NAME gmshippable:latest
