--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
     ruby: circleci/ruby@0.1.2
 
 jobs:
-    docker:
+    build:
         executor: ruby/default    
         steps:
             - run: docker build -t getmatch_circle .
