--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,12 @@
 version: 2.1
 
+orbs:
+    ruby: circleci/ruby@0.1.2
+
 jobs:
-    build:   
+    build:
+        executor: ruby/default    
         steps:
+            - checkout
             - run: docker build -t getmatch_circle .
             - run: docker run -t -v `pwd`:/test getmatch_circle:latest
