corrijo archivo para circleci, tarea #66

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 jobs:
   build:
-    machine: false
+    docker: true
     steps:
       - checkout
       - run: docker build -t gm_circle .
