--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 jobs:
   build:
-    docker: true
+    machine: true
     steps:
       - checkout
       - run: docker build -t gm_circle .
