corrijo archivo para circleci, tarea #66

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@ jobs:
       - image: joseegc10/get-match
     steps:
       - checkout
-      - run: docker run -t -v `pwd`:/test gm_circle:latest
+      - run: rake test
