--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2.1
 
 jobs:
   build:
-    docker:
-      - image: joseegc10/get-match
+    machine: true
     steps:
-      - run: docker run -t -v `pwd`:/test joseegc10/get-match
+      - checkout
+      - run: docker build -t gm_circle . 
+      - run: docker run -t -v `pwd`:/test gm_circle
