corrijo archivo para circleci, tarea #66

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: docker build -t gm_circle . 
-      - run: docker run -t -v `pwd`:/test gm_circle
+      - run: docker pull joseegc10/get-match
+      - run: docker run -t -v `pwd`:/test joseegc10/get-match
