acabo archivo para circleci, tarea #66

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,14 @@
+# Versión de CircleCI que vamos a usar
 version: 2.1
 
+# Trabajos
 jobs:
   build:
+    # Indicamos que hacemos uso de máquina con linux
     machine: true
+    # Pasos en la ejecución del trabajo build
     steps:
+      # Descargamos el repo
       - checkout
-      - run: docker pull joseegc10/get-match
+      # Ejecutamos los test con el contenedor de docker
       - run: docker run -t -v `pwd`:/test joseegc10/get-match
