--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,4 @@
 # Lenguaje del código
 language: ruby
 
-# Versiones de ruby donde se va a probar
-rvm:
-    - 2.7.2
-    - 2.7.1
-    - 2.7.0
-    - 2.6.0
-    - 2.5.0
-    - 2.4.0
-    - 2.3.0
-
-# Instalamos última versión de bundle
-before_install:
-    - gem install bundler
-
-# Instalamos las dependencias
-install: bundle install
-
-# Para ejecutar los test 
-script: rake test
+script: docker run -t -v `pwd`:/test gmtravis:latest
