--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ language: ruby
 
 # Versiones de ruby donde se va a probar
 rvm:
+    # Pruebo la última versión de ruby
     - ruby-head
-    - jruby
+    # Pruebo una versión beta
+    - 3.0.0-preview1
+    # Pruebo jruby en su última versión
+    - jruby-head
+    # Pruebo la última versión compatible
     - 2.3.0
 
 # Instalamos última versión de bundle
