cambio versiones de ruby en travis, tarea #72

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ language: ruby
 rvm:
     # Pruebo la última versión de ruby
     - ruby-head
-    # Pruebo una versión beta
-    - 3.0.0
     # Pruebo jruby en su última versión
     - jruby-head
+    # Pruebo una versión intermedia
+    - 2.6
     # Pruebo la última versión compatible
-    - 2.3.0
+    - 2.3
 
 # Instalamos última versión de bundle
 before_install:
