--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,8 @@ install: bundle install
 
 # Para ejecutar los test 
 script: rake test
+
+after_failure:
+    - gem unistall bundler
+    - gem install bundler -v 1.17.3
+    - rake test 
