--- a/.github/workflows/awsDeploy.yml
+++ b/.github/workflows/awsDeploy.yml
@@ -1,27 +1,30 @@
-name: deploy to lambda
-on: [push]
+name: Deploy master branch
+
+on:
+  push:
+    branches:
+      - master
+
 jobs:
-  deploy_source:
-    name: build and deploy lambda
+  deploy:
+    name: deploy
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [12.x]
-    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: zip
-        uses: montudor/action-zip@v0.1.0
-        with:
-          args: zip -qq -r ./bundle.zip ./
-      - name: default deploy
-        uses: appleboy/lambda-action@master
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: eu-west-3
-          function_name: telegramBot-aws/handler.getMatch
-          zip_file: bundle.zip
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - name: change directory
+      run: cd telegramBot-aws
+    - name: serverless deploy
+      uses: serverless/github-action@master
+      with:
+        args: deploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
