--- a/.github/workflows/awsDeploy.yml
+++ b/.github/workflows/awsDeploy.yml
@@ -1,17 +1,11 @@
 name: Deploy master branch
 
-on:
-  push:
-    branches:
-      - master
+on: [push]
 
 jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./telegramBot-aws
     strategy:
       matrix:
         node-version: [12.x]
@@ -22,9 +16,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: serverless deploy
+      working-directory: ./telegramBot-aws
       uses: serverless/github-action@master
-      with:
-        args: deploy
+      run: |
+        cd ./telegramBot-aws
+        serverless deploy
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
