pruebo action para deploy a lambda, tarea #77, [skip ci]

--- a/.github/workflows/awsDeploy.yml
+++ b/.github/workflows/awsDeploy.yml
@@ -16,11 +16,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: serverless deploy
-      working-directory: ./telegramBot-aws
       uses: serverless/github-action@master
-      run: |
-        cd ./telegramBot-aws
-        serverless deploy
+      with:
+        args: deploy
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
