termino bot y su integracion con lambda, tarea #77, [skip ci]

--- a/.github/workflows/awsDeploy.yml
+++ b/.github/workflows/awsDeploy.yml
@@ -1,6 +1,10 @@
 name: Deploy master branch
 
-on: [push]
+on:
+  push:
+    paths:
+      - "telegramBot.rb"
+      - "serverless.yml"
 
 jobs:
   deploy:
