termino bot y su integracion con lambda(ahora si), tarea #77, [skip ci]

--- a/.github/workflows/awsDeploy.yml
+++ b/.github/workflows/awsDeploy.yml
@@ -3,7 +3,7 @@ name: Deploy master branch
 on:
   push:
     paths:
-      - "telegramBot.rb"
+      - "handler.rb"
       - "serverless.yml"
 
 jobs:
