--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,6 @@ functions:
     events:
       - http:
           path: /
-          method: post
+          method: get
     environment:
       TG_TOKEN: ${ssm:bot-get-match-token~true}
